--- a/flexbox.html
+++ b/flexbox.html
@@ -8,14 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <header><h2>New</h2>Header</header>
-        <aside>Aside</aside>
-        <main>
-        <p>Main</p>
-        <p><a href="flexbox.html">Flexbox</a></p>
-        </main>
-        <footer>Footer</footer>
-      </div>
+    <ul class="flex-container">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+        <li class="flex-item">6</li>
+      </ul>
 </body>
 </html>
